# mobile-settings

./: AUTHORS  README.md  meson.build
common/: define.h  utils.c  utils.h
data/: meson.build  miatoll-settings.gresource.xml  miatoll-settings.service.in  mobile-settings.gresource.xml  mobile-settings.service.in  org.adishatz.MiatollSettings.conf  org.adishatz.MiatollSettings.gschema.xml  org.adishatz.MiatollSettings.service.in  org.adishatz.MiatollSettings.xml  org.adishatz.MobileSettings.conf  org.adishatz.MobileSettings.gschema.xml  org.adishatz.MobileSettings.service.in  org.adishatz.MobileSettings.xml  org.droidian.MobileSettings.conf  org.droidian.MobileSettings.gschema.xml  org.droidian.MobileSettings.service.in  org.droidian.MobileSettings.xml
debian/: changelog  control
system/: bus.c  bus.h  gestures-generic.c  gestures-generic.h  gestures-i2c.c  gestures-i2c.h  gestures-oneplus.c  gestures-oneplus.h  gestures-sec.c  gestures-sec.h  gestures-xiaomi.c  gestures-xiaomi.h  gestures.c  gestures.h  main.c  meson.build
user/: bus.c  bus.h  main.c  meson.build  settings.c  settings.h
